--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    <h1>
+
+    <h1 class='title'>
         Tic-Tac-Toe
     </h1>
+
+    <!--container container board and game output (player turn, winner etc.)-->
+    <div class='main'>
+        <div class='turn-message'>Player X's turn</div>
+        <div class='board-container'>
+            <div class="field" data-index="0"></div>
+            <div class="field" data-index="1"></div>
+            <div class="field" data-index="2"></div>
+            <div class="field" data-index="3"></div>
+            <div class="field" data-index="4"></div>
+            <div class="field" data-index="5"></div>
+            <div class="field" data-index="6"></div>
+            <div class="field" data-index="7"></div>
+            <div class="field" data-index="8"></div>
+        </div>
+    </div>
+
 </body>
 </html>
