--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <div class="field" data-index="7"></div>
             <div class="field" data-index="8"></div>
         </div>
+        <div class="settings-container">
+            <button class='reset-btn' type="button">Reset</button>
+        </div>
     </div>
+
 
 </body>
 </html>
