--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <div class='main'>
         <div class='turn-message'>Player X's turn</div>
         <div class='board-container'>
-            <div class="field" data-index="0"></div>
-            <div class="field" data-index="1"></div>
-            <div class="field" data-index="2"></div>
-            <div class="field" data-index="3"></div>
-            <div class="field" data-index="4"></div>
-            <div class="field" data-index="5"></div>
-            <div class="field" data-index="6"></div>
-            <div class="field" data-index="7"></div>
-            <div class="field" data-index="8"></div>
+            <div class="field" data-index="0" id="block_0"></div>
+            <div class="field" data-index="1" id="block_1"></div>
+            <div class="field" data-index="2" id="block_2"></div>
+            <div class="field" data-index="3" id="block_3"></div>
+            <div class="field" data-index="4" id="block_4"></div>
+            <div class="field" data-index="5" id="block_5"></div>
+            <div class="field" data-index="6" id="block_6"></div>
+            <div class="field" data-index="7" id="block_7"></div>
+            <div class="field" data-index="8" id="block_8"></div>
         </div>
         <div class="settings-container">
             <button class='reset-btn' type="button">Reset</button>
