enable marking of squares and turn based system

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class='main'>
         <div class='turn-message'>Player X's turn</div>
         <div class='board-container'>
+                      
             <div class="field" data-index="0" id="block_0"></div>
             <div class="field" data-index="1" id="block_1"></div>
             <div class="field" data-index="2" id="block_2"></div>
@@ -34,6 +35,6 @@
         </div>
     </div>
 
-
+    <script src='./script.js'></script>
 </body>
 </html>
